--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ input{
     align-items: center;
 
     border-radius: 100%;
-    width: 4vh;
-    height: 4vh;
+    width: 4em;
+    height: 4em;
 
     background-color: var(--accent-color);
     border-style: none;
